--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v2.993 - 2025-01-23
+        * Fixing a rushed update that caused lot's of problems due to newer Android API usage.
+
 v2.992 - 2025-01-22
         * Use latest NewPipeExtractor
         * Add ability to set the application language internally.
