--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+v2.997 - 2026-01-06
+        * Fix comment and reply loading.
+        * Fix a crash in the backup preference page.
+        * Translators:
+                * Besnik Bleta,Charlie Izzy, Ettore Atalan, Ihor Hordiichuk,Jeff Huang,Julio Montero,Kosei Taguchi,
+                * Massimo Pissarello, Milan, Milo Ivir, Nicolas Radu, Oğuz Ersen, Petrov, Priit Jõerüüt, Rex_sa, Samylol99,
+                * ShareASmile, Stefanos Stefanidis, Szia Tomi, Vishnu Kalapala, Yaron Shahrabani, kd1211A, maboroshin,
+                * ssantos, syl, whistlingwoods, Любомир Василев, 大王叫我来巡山
+
 v2.996 - 2025-08-31
         * Add ability to set a PIN code for changing preferences.
         * Polish the player tutorial text labels.
